fixture: seeder class and property service